# bocop

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  TODO.md  benchmark_bocop.py  clean.py  requirements.txt  setup.py  test_bocop.py  test_coverage.sh
.github/workflows/: .github-ci.yml  benchmark_linux.yml  ci.yml  ci.yml.nocache  ci_cache.yml  ci_cache.yml.fail  ci_linux.yml  ci_macos.yml  ci_macos.yml.disable  ci_mambaforge.yml  ci_mambaforge.yml.bak  ci_ubuntu.yml  ci_windows.yml  ci_windows.yml.disable  ci_windows.yml.disabled  coverage.yml  coverage.yml.disabled
.github/workflows/disable/: ci_macos.yml
bocop/: CHANGES.md  CMakeLists.old  CMakeLists.txt  README_LINUX.md  README_MACOS.md  README_WINDOWS.md  __init__.py  bocop.py  bocopGUI.py  jupyter_widgets.py
bocop/cmake/: FindCPPAD.cmake  FindIPOPT.cmake
bocop/examples/CT_goddard_maxalt_vlimit/: problem.def
bocop/examples/CT_smooth_case/: problem.cpp  problem.def
bocop/examples/basic_mintf/: build.sh  problem.cpp  problem.def
bocop/examples/beam/: benchmark.def  problem.cpp  problem.def
bocop/examples/bioreactor_1day_periodic/: benchmark.def  problem.cpp  problem.def
bocop/examples/bioreactor_Ndays/: benchmark.def  problem.def
bocop/examples/contrast/: problem.cpp  problem.def  trapeze1000.sol  trapeze2000.sol
bocop/examples/default/: build.sh  problem.cpp  problem.def
bocop/examples/double_integrator_energy/: build.sh  problem.cpp  problem.def
bocop/examples/exponential/: problem.cpp  problem.def
bocop/examples/fuller/: benchmark.def  build.bat  build.sh  problem.cpp  problem.def
bocop/examples/goddard/: benchmark.def  control.init  goddard_iter_visu.ipynb  problem.cpp  problem.def
bocop/examples/goddard_auto_freetf/: problem.cpp  problem.def  state0.init
bocop/examples/goddard_maxalt_vlimit/: problem.cpp  problem.def
bocop/examples/heat_dirichlet/: benchmark.def  problem.cpp  problem.def
bocop/examples/heat_neumann/: problem.cpp  problem.def
bocop/examples/insurance_audit/: problem.cpp  problem.def
bocop/examples/insurance_non_audit/: problem.cpp  problem.def
bocop/examples/integrator_1D/: benchmark.def  problem.cpp  problem.def
bocop/examples/integrator_2D/: benchmark.def  problem.cpp  problem.def
bocop/examples/jackson_basic/: benchmark.def  problem.cpp  problem.def
bocop/examples/microgrid/: problem.cpp  problem.def
bocop/examples/microgrid/data/: Summer-Load.data  Summer-Solar.data  Winter-Load.data  Winter-Solar.data
bocop/examples/regulator/: problem.cpp  problem.def
bocop/examples/regulator_1D/: benchmark.def  problem.cpp  problem.def  regulator_1D.ipynb
bocop/examples/regulator_2D/: benchmark.def  build.bat  problem.def  problem.ipynb
bocop/examples/robbins/: benchmark.def  problem.cpp  problem.def
bocop/examples/smooth_case/: build.bat  build.sh  problem.def
bocop/examples/swimmer/: benchmark.def  build.sh  problem.cpp  problem.def
bocop/examples/vanderpol/: benchmark.def  build.bat  problem.cpp  problem.def
bocop/matlab/: readSolution.m
bocop/src/: CMakeLists.old  CMakeLists.txt  bocopwrapper.i  main.cpp
bocop/src/AD/: dOCPCppAD.cpp  dOCPCppAD.h
bocop/src/DOCP/: dControl.cpp  dControl.h  dOCP.cpp  dOCP.h  dODE.cpp  dODE.h  dODERK.cpp  dODERK.h  dState.cpp  dState.h  solution.cpp  solution.h
bocop/src/NLP/: NLP.h  NLPSolver.h  NLPSolverIpopt.cpp  NLPSolverIpopt.h
bocop/src/OCP/: OCP.cpp  OCP.h
bocop/src/tools/: bufferAdaptor.h  tools.cpp  tools.h  tools_interpolation.cpp  tools_interpolation.h
bocop/test/: benchmark.list.csv  examples.list.csv
bocop/test/logs/: gauss2-100.csv  gauss2-1000.csv  gauss2-200.csv  gauss2-500.csv  gauss3-100.csv  gauss3-1000.csv  gauss3-200.csv  gauss3-500.csv  midpoint-100.csv  midpoint-1000-mu_monotone.csv  midpoint-1000.csv  midpoint-200.csv  midpoint-500.csv
bocopj/: Manifest.toml  Project.toml
bocopj/src/: bocopj.jl  bt.jl
doc/: Doxyfile  bocop_main_classes.odg  bocop_main_classes.xcf  conf.py  index.rst
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/classes/: NLP.rst.txt  OCP.rst.txt  dOCPCppAD.rst.txt
doc/_build/html/classes/: NLP.html  OCP.html  bcp.html  dOCP.html  dOCPCppAD.html
doc/classes/: bcp.rst  dOCP.rst
doc/xml/: CMakeLists_8txt.xml  NLPSolverIpopt_8cpp.xml  NLPSolverIpopt_8h.xml  NLPSolver_8h.xml  NLP_8h.xml  OCP_8cpp.xml  OCP_8h.xml  bufferAdaptor_8h.xml  classNLP.xml  classNLPSolver.xml  classNLPSolverIpopt.xml  classNLPSolverResults.xml  classOCP.xml  classTNLPImpl.xml  classbcp_1_1CSVRow.xml  classbcp_1_1buffer__adaptor.xml  classdControl.xml  classdOCP.xml  classdOCPCppAD.xml  classdOCPsolution.xml  classdODE.xml  classdState.xml  dControl_8cpp.xml  dControl_8h.xml  dOCPCppAD_8cpp.xml  dOCPCppAD_8h.xml  dOCP_8cpp.xml  dOCP_8h.xml  dODE_8cpp.xml  dODE_8h.xml  dState_8cpp.xml  dState_8h.xml  dir_0e0dcf0fda0f81688a2ca3e6f32089ad.xml  dir_6a7dacf840a6b467586c113d885c3720.xml  dir_896a54b75c7e262a4c015ea5075db761.xml  dir_a7bc164523d42b359aca2e9e633c329d.xml  dir_a99e230c655bc5b0a0628c8b49a5bc90.xml  dir_bff5f52d7335ca89bd26ef567e56aadd.xml  dir_c371e86623f5602f4a1ae42254af2842.xml  index.xml  (+9 more)
matlab/: readSolution.m
pkg/env/: bocop-linux-light.yaml  bocop-linux.yaml  bocop-macos-light.yaml  bocop-macos.yaml  bocop-windows-light.yaml  bocop-windows.yaml
pkg/recipe/: bld.bat  build.sh  conda_build_config.yaml  construct.yaml  meta.yaml
